fixed spelling errors

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div class="container">
             <div class="card">
-                <div class="front"><p>Phillipines</p></div>
+                <div class="front"><p>Philippines</p></div>
                 <div class="back"><p>Manila</p></div>
             </div>
         </div>
